<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/main_background"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/manufacturerET"
        android:background="#99d6d2ff"
        android:paddingLeft="8dp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/manufacturer"
        app:layout_constraintBottom_toTopOf="@+id/modelET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/modelET"
        android:background="#99d6d2ff"
        android:paddingLeft="8dp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/model"
        app:layout_constraintBottom_toTopOf="@+id/priceET"
        app:layout_constraintEnd_toEndOf="@+id/manufacturerET"
        app:layout_constraintStart_toStartOf="@+id/manufacturerET"
        app:layout_constraintTop_toBottomOf="@+id/manufacturerET" />

    <EditText
        android:id="@+id/priceET"
        android:background="#99d6d2ff"
        android:paddingLeft="8dp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/price"
        app:layout_constraintBottom_toTopOf="@+id/addScreenBtn"
        app:layout_constraintEnd_toEndOf="@+id/modelET"
        app:layout_constraintStart_toStartOf="@+id/modelET"
        app:layout_constraintTop_toBottomOf="@+id/modelET" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle"
        android:id="@+id/addScreenBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="64dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>