<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_card_background">

    <TextView
        android:id="@+id/manufacturerTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight=".7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/idTV"
        tools:text="@string/manufacturer"/>

    <TextView
        android:id="@+id/idTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/manufacturerTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".3"
        app:layout_constraintStart_toEndOf="@+id/manufacturerTV"
        app:layout_constraintTop_toTopOf="@+id/manufacturerTV"
        tools:text="ID: Phone ID" />

    <TextView
        android:id="@+id/modelTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/manufacturerTV"
        app:layout_constraintEnd_toEndOf="@+id/manufacturerTV"
        app:layout_constraintStart_toStartOf="@+id/manufacturerTV"
        tools:text="@string/model" />

    <TextView
        android:id="@+id/priceTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modelTV"
        tools:text="@string/price" />
</androidx.constraintlayout.widget.ConstraintLayout>